--- a/js/tinymce/skins/lightgray/SplitButton.less
+++ b/js/tinymce/skins/lightgray/SplitButton.less
@@ -49,6 +49,10 @@
 }
 
 // D2L
+.@{prefix}-splitbtn .@{prefix}-open {
+	width: 1.4rem;
+}
+
 // Fix Jitter issue
 .@{prefix}-splitbtn:hover .@{prefix}-open {
     border-left-width: 1px;
